let footerIcons = {
  Buy: 'line-chart',
  Sell: 'dollar',
  Trade: 'exchange',
  Assets: 'bank',
  Explore: 'compass',
  Transfer: 'arrows-h',
  Send: 'upload',
  Receive: 'download',
  History: 'tasks',
}

/* Alternative choices:

BUY: signal, bar-chart
SELL: arrow-circle-up,
HISTORY: copy, table, th-list,
*/

/* Future:
Notifications: bell
*/

export default footerIcons;
